address comments I
Signed-off-by: Jing Zhang <jngz@amazon.com>